fixing alignment of signed-in-as-username message next to cog

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -253,6 +253,11 @@
       font-size: 14px;
       padding: 1px;
       text-transform: none;
+      padding-right: 3px;
+    }
+
+    li a.smalltext {
+      padding-top: 0px;
     }
 
     .dropdown-menu {
